# zkvm-prover

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Cargo.toml.cpu  Cargo.toml.gpu  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  action.yml  bench-cpu.sh  bench-gpu.sh  benchmark.sh  benchmark_60M.sh  build-guest-actions-entrypoint.sh  build-guest-metadata-action.yml  build-guest.sh  clr.sh  differential_fuzz.rs  download-artifacts.sh  download-release.sh  e2e_gpu.sh  foundry.toml  gpu.patch  openvm-clippy  openvm-clippy.sh  partial.sh  release-fork  release.sh  rust-toolchain.toml  rustfmt.toml
ceno/: .gitignore  AGENTS.md  Cargo.toml  rust-toolchain.toml
ceno/build-guest/: Cargo.toml
ceno/build-guest/src/: main.rs
ceno/circuits/batch-circuit/: Cargo.toml
ceno/circuits/batch-circuit/src/: main.rs
ceno/circuits/bundle-circuit/: Cargo.toml
ceno/circuits/bundle-circuit/src/: main.rs
ceno/circuits/chunk-circuit/: Cargo.toml
ceno/circuits/chunk-circuit/src/: main.rs
ceno/prover-test/: Cargo.toml
ceno/prover-test/src/: main.rs  witness.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/build-guest/: .env  Cargo.toml
crates/build-guest/src/: main.rs  post_process.rs  verifier.rs
crates/build-guest/src/builder/: mod.rs
crates/build-guest/src/verifier/: asm_utils.rs  asm_writer.rs  io_converter.rs  mod.rs
crates/ceno-circuits/chunk-circuit/: Cargo.toml
crates/ceno-circuits/chunk-circuit/.cargo/: config.toml
crates/ceno-circuits/chunk-circuit/src/: main.rs
crates/ceno-circuits/integration/: Cargo.toml
crates/ceno-circuits/integration/src/: main.rs
crates/circuits/batch-circuit/: .gitignore  Cargo.toml  batch_exe_commit.rs  batch_leaf_commit.rs  batch_vm_commit.rs  exe.commit  leaf.commit  openvm.toml  openvm_init.rs
crates/circuits/batch-circuit/src/: batch.rs  blob_consistency.rs  blob_data.rs  child_commitments.rs  child_commitments_legacy.rs  child_commitments_rv32.rs  chunk.rs  circuit.rs  execute.rs  lib.rs  main.rs  payload.rs  types.rs  utils.rs
crates/circuits/bundle-circuit/: Cargo.toml  bundle_exe_commit.rs  bundle_exe_euclidv1_commit.rs  bundle_leaf_commit.rs  bundle_vm_commit.rs  digest_1  digest_1_euclidv1  digest_2  exe.commit  leaf.commit  leaf_commit.rs  openvm.toml
crates/circuits/bundle-circuit/src/: child_commitments.rs  child_commitments_legacy.rs  circuit.rs  main.rs
crates/circuits/chunk-circuit/: Cargo.toml  chunk_exe_commit.rs  chunk_exe_rv32_commit.rs  chunk_leaf_commit.rs  chunk_vm_commit.rs  exe.commit  exe_commit.rs  exe_rv32.commit  exe_rv32_commit.rs  leaf.commit  leaf_commit.rs  openvm.toml  openvm_init.rs
crates/circuits/chunk-circuit/.cargo/: config.toml
crates/circuits/chunk-circuit/src/: circuit.rs  execute.rs  main.rs  utils.rs
crates/circuits/circuit/: Cargo.toml
crates/circuits/circuit/src/: lib.rs
crates/circuits/types/: Cargo.toml  README.md
crates/circuits/types/src/: batch.rs  bundle.rs  chunk.rs  lib.rs  proof.rs
crates/integration/: Cargo.toml  root-verifier-vm-config
crates/integration/src/: axiom.rs  lib.rs  utils.rs
crates/integration/src/commitments/: batch_exe_commit.rs  batch_vm_commit.rs  bundle_exe_commit.rs  bundle_leaf_commit.rs  bundle_vm_commit.rs  chunk_exe_commit.rs  chunk_leaf_commit.rs  chunk_vm_commit.rs  mod.rs
crates/integration/src/testers/: batch.rs  bundle.rs  chunk.rs  mod.rs
crates/integration/src/utils/: blob.rs  evm.rs  mod.rs
crates/integration/testdata/: 1.json  2.json  3.json  4.json  batch-task-legacy-test-out.json  batch-task-multi-1.json  batch-task-test-out.json  batch-task.json  bundle-task-too-long.json  flatten-trace.py
crates/integration/tests/: batch_circuit.rs  bundle_circuit.rs  ceno_chunk_circuit.rs  chunk_circuit.rs  onchain_verifier.rs  onchain_verifier.rs.bak
crates/prover/: Cargo.toml
crates/prover/src/: error.rs  lib.rs  prover.rs  setup.rs  utils.rs
crates/prover/testdata/: 2.json  batch-proof.json  bundle-proof.json  chunk-12508460-12508463.json  chunk-proof.json
crates/types/: Cargo.toml
crates/types/base/: Cargo.toml
crates/types/batch/: Cargo.toml
crates/types/bundle/: Cargo.toml
crates/types/chunk/: Cargo.toml
crates/types/circuit/: Cargo.toml
crates/types/sp1/: Cargo.toml
crates/types/src/: axiom.rs  lib.rs  openvm.rs  proof.rs  task.rs  util.rs  utils.rs  zkvm.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: evm.rs  lib.rs  verifier.rs
crates/verifier/testdata/: chunk-proof-2.json  chunk-proof.json  trace_input_verifier.hex
patches/openvm-sdk/: Cargo.toml
patches/openvm-sdk/examples/: sdk_app.rs  sdk_evm.rs  sdk_stark.rs
patches/openvm-sdk/programs/: Cargo.toml
patches/openvm-sdk/src/: builder.rs  compiled.rs  config.rs  error.rs  fs.rs  halo2_params.rs  lib.rs  solidity.rs  stdin.rs  tests.rs  types.rs  util.rs
patches/openvm-static-verifier/: Cargo.toml
patches/openvm-static-verifier/src/: circuit.rs  codec.rs  config.rs  context_tree.rs  keygen.rs  lib.rs  profiling.rs  prover.rs  utils.rs  wrapper.rs
patches/openvm-static-verifier/tests/: real_prover_roundtrip.rs
sp1/: AGENTS.md  Cargo.toml  run-gpu-prover-e2e.sh  run-gpu-prover.sh
sp1/.cargo/: config.toml
sp1/build-guest/: Cargo.toml
sp1/build-guest/build-guest-sp1/: Cargo.toml
sp1/build-guest/src/: main.rs
sp1/circuits/batch-circuit/: Cargo.toml
sp1/circuits/bundle-circuit/: Cargo.toml
sp1/circuits/chunk-circuit/: Cargo.toml
sp1/prover-test/: Cargo.toml
sp1/prover-test/src/: main.rs  witness.rs
sp1/types/: Cargo.toml
sp1/types/src/: circuit.rs  crypto.rs  lib.rs
sp1/verifier/: foundry.toml
sp1/verifier/test/: SP1BundleVerifier.t.sol
zisk/: .gitignore  AGENTS.md  Cargo.toml
zisk/.cargo/: config.toml
zisk/build-guest/: Cargo.toml
zisk/build-guest/src/: main.rs
zisk/circuits/batch-circuit/: Cargo.toml
zisk/circuits/bundle-circuit/: Cargo.toml
zisk/circuits/chunk-circuit/: Cargo.toml
zisk/prover-test/: Cargo.toml
zisk/prover-test/src/: main.rs  witness.rs
zisk/recursion-test/: Cargo.toml
zisk/recursion-test/src/: main.rs
(+539 files in other folders)
