[workspace]
members = [
  "crates/types/base",
  "crates/types/circuit",
  "crates/types/chunk",
  "crates/types/batch",
  "crates/types/bundle",
  "crates/types",
  "crates/circuits/chunk-circuit",
  "crates/circuits/batch-circuit",
  "crates/circuits/bundle-circuit",
  "crates/prover",
  "crates/verifier",
  "crates/integration",
  "crates/build-guest",
]
resolver = "2"

[workspace.package]
authors = ["Scroll developers"]
edition = "2021"
homepage = "https://github.com/scroll-tech/zkvm-prover"
readme = "README.md"
repository = "https://github.com/scroll-tech/zkvm-prover"
version = "0.6.0"

[workspace.dependencies]
# openvm guest libs
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-custom-insn = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", features = ["std"] }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", features = ["std"] }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-verify-stark = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }

# openvm host libs
openvm-build = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-instructions ={ git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false, features = ["parallel", "evm-prove"] }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }

# more openvm related libs
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.0-rc.6" }

sbv-core = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "master", features = ["scroll", "rkyv"] }
sbv-helpers = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "master" }
sbv-primitives = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "master", features = ["scroll", "rkyv"] }
sbv-kv = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "master" }
sbv-trie = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "master" }
sbv-precompile = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "master" }

alloy-primitives = { version = "1.3", default-features = false, features = ["std", "map-hashbrown", "map-fxhash", "rkyv"] }
alloy-serde = { version = "1.0.13", default-features = false }
bitcode = { version = "0.6.5", default-features = false, features = ["serde", "derive"] }
bincode_v1 = { version = "1.3", package = "bincode"}
bincode = { version = "2.0", features = ["serde"] }
cargo_metadata = "0.20"
c-kzg = { version = "2.0" }
derivative = "2.2.0"
eyre = "0.6"
halo2curves-axiom = { version = "0.5.3" }
itertools = "0.14"
hex-literal = { version = "0.4.1", default-features = false }
hex = "0.4"
metrics = "0.23.0"
metrics-util = "0.17"
metrics-tracing-context = "0.16.0"
rayon = "1.10"
rkyv = "0.8"
revm = "27"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = "3.11.0"
base64 = "0.22"
snark-verifier-sdk = { version = "=0.2.1", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
    "display",
    "revm",
] }
tiny-keccak = "2.0"
tracing = "0.1"
vm-zstd = { git = "https://github.com/scroll-tech/rust-zstd-decompressor.git", branch = "master" }
toml = "0.8.14"
tracing-subscriber = "0.3"

scroll-zkvm-types = { path = "crates/types" }
scroll-zkvm-types-base = { path = "crates/types/base" }
scroll-zkvm-types-circuit = { path = "crates/types/circuit" }
scroll-zkvm-types-chunk = { path = "crates/types/chunk" }
scroll-zkvm-types-batch = { path = "crates/types/batch" }
scroll-zkvm-types-bundle = { path = "crates/types/bundle" }
scroll-zkvm-integration = { path = "crates/integration" }
scroll-zkvm-prover = { path = "crates/prover" }
scroll-zkvm-verifier = { path = "crates/verifier" }

[patch.crates-io]
revm = { git = "https://github.com/scroll-tech/revm" }
revm-bytecode = { git = "https://github.com/scroll-tech/revm" }
revm-context = { git = "https://github.com/scroll-tech/revm" }
revm-context-interface = { git = "https://github.com/scroll-tech/revm" }
revm-database = { git = "https://github.com/scroll-tech/revm" }
revm-database-interface = { git = "https://github.com/scroll-tech/revm" }
revm-handler = { git = "https://github.com/scroll-tech/revm" }
revm-inspector = { git = "https://github.com/scroll-tech/revm" }
revm-interpreter = { git = "https://github.com/scroll-tech/revm" }
revm-precompile = { git = "https://github.com/scroll-tech/revm" }
revm-primitives = { git = "https://github.com/scroll-tech/revm" }
revm-state = { git = "https://github.com/scroll-tech/revm" }

alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "feat/rkyv" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
