[workspace]
members = [
  "crates/types/base",
  "crates/types/circuit",
  "crates/types/chunk",
  "crates/types/batch",
  "crates/types/bundle",
  "crates/types",
  "crates/circuits/chunk-circuit",
  "crates/circuits/batch-circuit",
  "crates/circuits/bundle-circuit",
  "crates/prover",
  "crates/verifier",
  "crates/integration",
  "crates/build-guest",
  "crates/tools/upload-axiom",
  "crates/dogeos/circuits/chunk-circuit",
  "crates/dogeos/circuits/batch-circuit",
  "crates/dogeos/circuits/bundle-circuit",
  "crates/dogeos/integration",
]
resolver = "2"

[workspace.package]
authors = ["Scroll developers"]
edition = "2021"
homepage = "https://github.com/scroll-tech/zkvm-prover"
readme = "README.md"
repository = "https://github.com/scroll-tech/zkvm-prover"
version = "0.7.1"

[workspace.dependencies]
# openvm guest libs
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-custom-insn = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", tag = "v1.4.1", features = [
  "std",
] }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", tag = "v1.4.1", features = [
  "std",
] }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }

# openvm host libs
openvm-benchmarks-prove = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-benchmarks-utils = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-instructions = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-native-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-native-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false, features = [
  "parallel",
  "evm-prove",
  "tco",
  "unprotected"
] }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }

# more openvm related libs
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.2" }

sbv-core = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2" }
sbv-helpers = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2", features = ["dev"] }
sbv-primitives = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2" }
sbv-utils = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2" }
sbv-trie = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2" }

alloy-consensus = "1.0"
alloy-provider = "1.0"
alloy-rpc-client = "1.0"
alloy-transport = "1.0"
alloy-primitives = { version = "1.4", default-features = false, features = [
  "std",
  "map-hashbrown",
  "map-fxhash",
] }
alloy-serde = { version = "1.0.13", default-features = false }
alloy-sol-types = { version = "1.3", default-features = false }
bitcode = { version = "0.6.5", default-features = false, features = [
  "serde",
  "derive",
] }
bincode_v1 = { version = "1.3", package = "bincode" }
bincode = { version = "2.0", features = ["serde"] }
cargo_metadata = "0.23"
clap = "4.5"
c-kzg = { version = "2.0" }
csv = "1.3.1"
derivative = "2.2.0"
ecies = { git = "https://github.com/scroll-tech/ecies-rs" }
eyre = "0.6"
color-eyre = "0.6"
futures = "0.3"
halo2curves-axiom = { version = "0.7.2" }
itertools = "0.14"
hex-literal = { version = "0.4.1", default-features = false }
hex = "0.4"
metrics = "0.23.0"
metrics-util = "0.17"
metrics-tracing-context = "0.16.0"
rayon = "1.10"
revm = "29"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = "3.11.0"
base64 = "0.22"
snark-verifier-sdk = { version = "=0.2.1", default-features = false, features = [
  "loader_halo2",
  "halo2-axiom",
  "display",
  "revm",
] }
tiny-keccak = "2.0"
thiserror = "2"
tracing = "0.1"
vm-zstd = { git = "https://github.com/scroll-tech/rust-zstd-decompressor.git", rev = "b027327" }
toml = "0.8.14"
tracing-subscriber = "0.3"
sysinfo = { version = "0.35", default-features = false }
bytesize = "2.0.1"
url = "2.5.4"
tokio = "1"
axiom-sdk = { git = "https://github.com/axiom-crypto/axiom-api-cli.git", branch = "develop" }
dotenvy = "0.15"
jiff = "0.2"

scroll-zkvm-types = { path = "crates/types" }
scroll-zkvm-types-base = { path = "crates/types/base" }
scroll-zkvm-types-circuit = { path = "crates/types/circuit" }
scroll-zkvm-types-chunk = { path = "crates/types/chunk" }
scroll-zkvm-types-batch = { path = "crates/types/batch" }
scroll-zkvm-types-bundle = { path = "crates/types/bundle" }
scroll-zkvm-integration = { path = "crates/integration", default-features = false }
scroll-zkvm-prover = { path = "crates/prover" }
scroll-zkvm-verifier = { path = "crates/verifier" }

# dogeos crates
#bridge_core = { path = "../dogeos-core/crates/bridge_core", default-features = false }
#bridge_protocol = { path = "../dogeos-core/crates/bridge_protocol", default-features = false }
#bridge_adapters_zk = { path = "../dogeos-core/crates/bridge_adapters_zk", default-features = false }
#bridge_steps_da = { path = "../dogeos-core/crates/bridge_steps_da", default-features = false }
#bridge_steps_deposit = { path = "../dogeos-core/crates/bridge_steps_deposit", default-features = false }
#bridge_transforms = { path = "../dogeos-core/crates/bridge_transforms", default-features = false }
bridge_core = { git = "ssh://git@github.com/DogeOS69/dogeos-core.git", branch = "feat/trust-minimized-bridge-crates", default-features = false }
bridge_protocol = { git = "ssh://git@github.com/DogeOS69/dogeos-core.git", branch = "feat/trust-minimized-bridge-crates", default-features = false }
bridge_adapters_zk = { git = "ssh://git@github.com/DogeOS69/dogeos-core.git", branch = "feat/trust-minimized-bridge-crates", default-features = false }
bridge_steps_da = { git = "ssh://git@github.com/DogeOS69/dogeos-core.git", branch = "feat/trust-minimized-bridge-crates", default-features = false }
bridge_steps_deposit = { git = "ssh://git@github.com/DogeOS69/dogeos-core.git", branch = "feat/trust-minimized-bridge-crates", default-features = false }
bridge_transforms = { git = "ssh://git@github.com/DogeOS69/dogeos-core.git", branch = "feat/trust-minimized-bridge-crates", default-features = false }

[patch.crates-io]
revm = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-bytecode = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-context = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-context-interface = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-database = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-database-interface = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-handler = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-inspector = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-interpreter = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-precompile = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-primitives = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-state = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 2
debug-assertions = false
strip = false

[profile.bench]
inherits = "profiling"
