# Ceno zkVM backend, isolated from the root OpenVM workspace.
[workspace]
members = [
  "circuits/chunk-circuit",
  "circuits/batch-circuit",
  "circuits/bundle-circuit",
  "build-guest",
  "prover-test",
]
resolver = "2"

[workspace.package]
authors = ["Scroll developers"]
edition = "2021"
homepage = "https://github.com/scroll-tech/zkvm-prover"
readme = "../README.md"
repository = "https://github.com/scroll-tech/zkvm-prover"
version = "0.8.0"

[workspace.dependencies]
ceno_emul = { path = "../../ceno/ceno_emul" }
ceno_host = { path = "../../ceno/ceno_host" }
ceno_rt = { path = "../../ceno/ceno_rt" }
ceno_sdk = { path = "../../ceno/ceno_cli", package = "cargo-ceno", default-features = false }
ceno_zkvm = { path = "../../ceno/ceno_zkvm" }
ff_ext = { git = "https://github.com/scroll-tech/gkr-backend.git", package = "ff_ext", tag = "v1.0.0-alpha.34" }
mpcs = { git = "https://github.com/scroll-tech/gkr-backend.git", package = "mpcs", tag = "v1.0.0-alpha.34", features = ["whir"] }

scroll-zkvm-backend = { path = "../crates/backend" }
scroll-zkvm-types-base = { path = "../crates/types/base" }
scroll-zkvm-types-chunk = { path = "../crates/types/chunk", default-features = false }
scroll-zkvm-types-batch = { path = "../crates/types/batch", default-features = false }
scroll-zkvm-types-bundle = { path = "../crates/types/bundle", default-features = false }

alloy-primitives = { version = "1.4", default-features = false, features = ["std"] }
alloy-consensus = "1.0"
sbv-core = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2" }
sbv-primitives = { git = "https://github.com/scroll-tech/stateless-block-verifier", tag = "scroll-v91.2" }
alloy-serde = { version = "1.0.13", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
clap = "4.5"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
bitcode = { version = "0.6.5", default-features = false, features = ["serde", "derive"] }
bincode = { version = "2.0", features = ["serde"] }
eyre = "0.6"
vm-zstd = { git = "https://github.com/scroll-tech/rust-zstd-decompressor.git", rev = "b027327", features = ["zstd"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[patch.crates-io]
revm = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
alloy-evm = { git = "https://github.com/alloy-rs/alloy-evm", tag = "v0.22.2" }
revm-bytecode = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-context = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-context-interface = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-database = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-database-interface = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-handler = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-inspector = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-interpreter = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-precompile = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-primitives = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }
revm-state = { git = "https://github.com/scroll-tech/revm", tag = "scroll-v91" }

[patch."https://github.com/scroll-tech/ceno-gpu-mock.git"]
cuda_hal = { path = "../../ceno-gpu/cuda_hal" }
