[package]
name = "scroll-zkvm-build-guest-ceno"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "build-guest-ceno"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
